Small fixes
I have yet to limit the lengths of the result and operation displayed on
screen (with this version, numbers are wirtten out of the calculator
screen if the result is too long). Maybe add a dynamic size-font ? : the
font-size diminishes as the length of the result grows.

--- a/css/calculator.css
+++ b/css/calculator.css
@@ -45,6 +45,7 @@ body {
 #calculator-screen-result {
 	color: #565151;
 	font-size: 66px;
+	line-height: 66px
 	font-weight: 200;
 	text-align: right;
 	cursor: pointer;
